--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node index.js",
-    "start": "node index.js"
+    "start": "node index.ts"
   },
   "keywords": [
     "cedi"
@@ -18,13 +18,16 @@
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "intl": "^1.2.5",
     "node-fetch": "^3.2.9",
+    "rimraf": "^4.1.2",
+    "ts-node-dev": "^2.0.0",
     "twitter": "^1.7.1",
     "twitter-api-v2": "^1.12.3",
     "winston": "^3.8.2"
   },
-  "type": "module",
   "devDependencies": {
+    "@types/cron": "^2.0.0",
     "@types/node": "^18.11.18"
   }
 }
